src/css/about.css
/* ... */
#smallMountain.bubbleBackground {
    left:calc(100% + 310px); bottom:21%;
    width:500px; height:500px;
    clip-path: polygon(0 60%, 60% 0, 100% 0, 100% 0, 100% 40%, 40% 100%, 0 100%, 0 100%);
    transform:scale(1.5);
}
#smallBackground {
    pointer-events:none;
}
.piano {
    position:absolute;
    width:100%; height:100%;
    opacity:0.3;
    transform:scale(1.1);
    animation:bubbleFadeIn 2s;
}

.knowledge, .experience, .background {
    display:none;
}
.mountain.bubbleKnowledge .knowledge,
.mountain.bubbleExperience .experience,
.mountain.bubbleBackground #bigBackground,
.mountain.bubbleBackground #midBackground {
    display:block;
    animation:bubbleFadeIn 2s;
}

.mountain.bubbleBackground #smallBackground {
    display:block;
}

.hoverMountain {
    display:block;
    transform-origin:bottom;
    background: rgba(88, 188, 255, 0.397);
    width:100%; height:100%;
}
.mountainContainer.switch .hoverMountain:hover {
    cursor:pointer;
}
#bigMountain.bubbleKnowledge .hoverMountain { background: rgba(110, 255, 236, 0.199); }
#midMountain.bubbleKnowledge .hoverMountain { background: rgba(182, 231, 136, 0.274); }
#smallMountain.bubbleKnowledge .hoverMountain { background: rgba(202, 216, 255, 0.287); }

.bubbleKnowledge,
.bubbleExperience,
.bubbleBackground {
    position:absolute;
}


@keyframes aboutHomeButton {
    from {
        opacity:0;
        right:200px;
    } to {
        opacity:1;
        right:60px;
    }
}

@keyframes titleFade {
    from {
        opacity: 0;
        transform:translateY(-50%);
    } to {
        opacity: 1;
        transform:translateY(0%);
    }
}

@keyframes letterFade {
    0% {
        opacity:0;
        transform:scale(0);
    } 60% {
        opacity:0;
        transform:scale(0);
    } 100% {
        opacity:1;
        transform:scale(1);
    }
}

@keyframes logoRoll {
    0% {
        opacity:0;
        transform:translateX(-60%) translateY(-50%) rotateZ(-270deg);
    } 60% {
        opacity:0;
        transform:translateX(-60%) translateY(-50%) rotateZ(-270deg);
    } 100% {
        opacity:1;
        transform:translateX(0%) translateY(-50%) rotateZ(0deg);
    }
}

@keyframes logoTextFade {
    0% {
        opacity:0;
        transform:translateX(-10%);
    } 55% {
        opacity:0;
        transform:translateX(-10%);
    } 100% {
        opacity:1;
        transform:translateX(0%);
    }
}

@keyframes mountainFadeUp {
    from {
        opacity:0;
        transform:scale(0) translateX(0);
        transform-origin:bottom;
    } to {
        opacity:1;
        transform:scale(1) translateX(0);
        transform-origin:bottom;
    }
}

@keyframes switchScaleIn {
    0% {
        opacity:0;
        transform:scale(0.5);
    } 80% {
        opacity:0;
        transform:scale(0.5);
    } 90% {
        opacity:0.8;
        transform:scale(1.3);
    } 100% {
        opacity:1;
        transform:scale(1);
    }
}

@keyframes switchPulse {
    0% {
        filter:drop-shadow(0 0 0px rgba(255, 255, 255, 0));
    } 20% {
        filter:drop-shadow(0 0 40px rgb(255, 255, 255));
    } 100% {
        filter:drop-shadow(0 0 0px rgba(255, 255, 255, 0));
    }
}

@keyframes rotateCenter {
    from {
        transform:rotateZ(0deg)
    } to {
        transform:rotateZ(-360deg)
    }
}

@keyframes bubbleFadeIn {
    0% {
        filter:opacity(0)
    } 20% {
        filter:opacity(0)
    } 100% {
        filter:opacity(1)
    }
}

@media only screen and (max-width:2200px) {
    .aboutLogoDiv:nth-child(3),
    .aboutLogoDiv:nth-child(4) {
        width:50%;
        display:inline-block;
    }
}
/* ... */

